# pocketknife

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: chat.rs  cli.rs  file.rs  main.rs
