[package]
edition = "2021"
name = "pk"
version = "0.1.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.2.7", features = [
  "color",
  "error-context",
  "help",
  "std",
  "suggestions",
  "usage",
  "derive",
  "env",
]}
reqwest = {version = "0.11", features = ["blocking", "json"]}
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0"
